Mon May 31 14:48:21 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager.mpc:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:

	  Added export library thing for Windows.


Mon May 31 13:35:15 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/Config_Handlers/Config_Handlers.mpc:

	  Added the missing dependency library to the mpc file, which
          is CIAO_Server library.

Mon May 31 13:10:15 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager.mpc:

	  Added necessary dependency libraries to the mpc file, which
          causes build probelm under Windows.

        * DnC/DomainApplication/DomainApplication_Impl.h
        * DnC/DomainApplication/DomainApplication_Impl.cpp

          Removed these files since DomainApplication are now
          combined with DomainApplicationManager.


Mon May 31 11:00:50 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/Core/NodeApplication_Impl.cpp:
	  Fixed one bug of the refence count of Component instance
	  objectRef.

Mon May 31 00:40:25 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/Core/NodeApplication_Impl.cpp:
	* DnC/Core/NodeApplication_Impl.h:

	  Added component/home removal functionality.
	  Also added a install method which will be called by
	  NodeApplicationManager to install everything which belong
	  to the NodeApplication.

Sun May 30 17:47:10 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/tests/NodeApplicationTest:

          Directory for testing CIAO's NodeApplication entity

        * DnC/tests/NodeApplicationTest/NodAppTest.mpc:
          mpc file for this test case

        * DnC/tests/NodeApplicationTest/NodeAppTest_RoundTrip.idl:
        * DnC/tests/NodeApplicationTest/NodeAppTest_RoundTrip.cidl:
        * DnC/tests/NodeApplicationTest/RoundTripEI.idl:

          A simple component as a test case that provides an interface